# minimal-cli-agent

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  codex-inspired-agent-roadmap.zh-CN.md  harness-gap-analysis.zh-CN.md  production.zh-CN.md  provider-matrix.zh-CN.md  quickstart.zh-CN.md  security.zh-CN.md  troubleshooting.zh-CN.md
examples/: hello.md
examples/mcp/: my-coffee.json
src/minimal_cli_agent/: __init__.py  agent.py  cli.py  cli_config.py  cli_events.py  cli_format.py  constants.py  context.py  context_fragments.py  context_window.py  environment.py  exceptions.py  file_tools.py  harness.py  interfaces.py  logging_utils.py  mcp_tools.py  memory.py  model.py  model_gateway.py  parser.py  plan.py  plugins.py  policy.py  profiles.py  prompts.py  redaction.py  skills.py  subagent.py  tool_ledger.py  tool_pipeline.py  tool_registry.py  types.py  workflow.py  world_state.py
tests/: test_agent.py  test_cli.py  test_context.py  test_context_window.py  test_environment.py  test_harness.py  test_local_integrations.py  test_mcp_tools.py  test_memory.py  test_model.py  test_model_gateway.py  test_parser.py  test_plugins.py  test_profiles.py  test_redaction.py  test_skills.py  test_stability.py  test_subagent.py  test_tool_ledger.py  test_tool_pipeline.py  trace_assertions.py
